results/scraper/box64/1136
Error Compiling src/dynarec conducted on Termux
# Make Compiler Error Files | Line Numbers
box64/src/dynarec/dynablock.c __ line 174 at 26
box64/src/emu/x64emu_private.h __ line 116 at 5
box64/src/emu/x64emu_private.h __ line 51 at 25
box64/src/dynarec/dynablock.c __ line 183 at 13
box64/src/dynarec/dynablock.c __ line 178 at 20
box64/src/dynarec/dynablock.c __ line 216 at 18
box64/src/dynarec/dynablock.c __ line 178 at 20
# Main Error
box64/src/dynarec/dynablock.c __ line 174 at 26
Msg:
```
box64/src/dynarec/dynablock.c:174:26: error: tentative definition has type 'struct __jmp_buf_tag' that is never completed
  174 | static __thread JUMPBUFF dynarec_jmpbuf;
      |                          ^
/root/box64/src/emu/x64emu_private.h:116:5: note: forward declaration of 'struct __jmp_buf_tag'
  116 |     JUMPBUFF*   jmpbuf;
      |     ^
```
jmpbuf mentioned in the majority of the errors listed

# Errors Outside Box64
/usr/include/setjmp.h __ line 109 at 33
/usr/include/setjmp.h __ line 119 at 26

# CMake Errno
make[2]: *** [CMakeFiles/dynarec_native.dir/build.make:76: CMakeFiles/dynarec_native.dir/src/dynarec/dynablock.c.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:127: CMakeFiles/dynarec_native.dir/all] Error 2
make: *** [Makefile:166: all] Error 2

This may be due to the alteration of "box64/system/box64.box64rc" because before its change. Box64 functioned and compiled normally.